[package]
name = "breve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
nanoid = "0.4.0"
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.28.2"
tracing = "0.1.40"
url = "2.3.1"
rust-embed="8.0.0"
serde = { version = "1.0", features = ["derive"] }
